--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -1,9 +1,4 @@
 wheel
 Babel
-PyInstaller==3.1.0
-# 3.2 is broken, see https://github.com/pyinstaller/pyinstaller/issues/1974
-# 3.1.1 is broken, see
-# https://github.com/pyinstaller/pyinstaller/issues/1957
-# https://github.com/pyinstaller/pyinstaller/issues/1948
-setuptools==19.2
 fabric
+pynsist
