--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,13 +19,14 @@ environment:
       PYTHON_ARCH: "32"
       ARCHITECTURE: "win32-2.7"
       VCOMP90_PATH: "x86_microsoft.vc90.openmp_1fc8b3b9a1e18e3b_9.0.21022.8_none_ecdf8c290e547f39"
-      MCVSx90_PATH: "x86_microsoft.vc90.crt_1fc8b3b9a1e18e3b_9.0.30729.8387_none_5090cb78bcba4a35"
+      MSVCx90_PATH: "x86_microsoft.vc90.crt_1fc8b3b9a1e18e3b_9.0.30729.8387_none_5094ca96bcb6b2bb"
 
-    # - PYTHON: "C:\\Python27-x64"
-    #   PYTHON_VERSION: "2.7.x"
-    #   PYTHON_ARCH: "64"
-    #   ARCHITECTURE: "win-amd64-2.7"
-    #   VCOMP90_PATH: "amd64_microsoft.vc90.openmp_1fc8b3b9a1e18e3b_9.0.21022.8_none_a5325551f9d85633"
+    - PYTHON: "C:\\Python27-x64"
+      PYTHON_VERSION: "2.7.x"
+      PYTHON_ARCH: "64"
+      ARCHITECTURE: "win-amd64-2.7"
+      VCOMP90_PATH: "amd64_microsoft.vc90.openmp_1fc8b3b9a1e18e3b_9.0.21022.8_none_a5325551f9d85633"
+      MSVCx90_PATH: "amd64_microsoft.vc90.crt_1fc8b3b9a1e18e3b_9.0.30729.8387_none_a5325551f9d85633"
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
@@ -44,9 +45,9 @@ build_script:
   - "%CMD_IN_ENV% pybabel compile -d kombilo/lang -D kombilo"
 
   # copy dlls which we want to include in the wheel
-  - ps: "ls c:/windows/winsxs/x86_microsoft.vc90.crt*"
-  - "cp c:/windows/winsxs/%MCVSx90_PATH%/ms*90.dll c:/projects/kombilo/dist/kombilo/"
-  - "cp c:/windows/winsxs/Manifests/%MCVSx90_PATH%.manifest c:/projects/kombilo/dist/kombilo/Microsoft.VC90.CRT.manifest"
+  - ps: "ls c:/windows/winsxs/amd64_microsoft.vc90.crt*"
+  - "cp c:/windows/winsxs/%MSVCx90_PATH%/ms*90.dll c:/projects/kombilo/dist/kombilo/"
+  - "cp c:/windows/winsxs/Manifests/%MSVCx90_PATH%.manifest c:/projects/kombilo/dist/kombilo/Microsoft.VC90.CRT.manifest"
 
   - "cp c:/windows/winsxs/%VCOMP90_PATH%/vcomp90.dll c:/projects/kombilo/dist/kombilo/"
   - "cp c:/windows/winsxs/Manifests/%VCOMP90_PATH%.manifest c:/projects/kombilo/dist/kombilo/Microsoft.VC90.OpenMP.manifest"
