Add some comments to installer file (conclusion: does not work)

--- a/installer.cfg
+++ b/installer.cfg
@@ -10,6 +10,12 @@ version=2.7.12
 
 [Include]
 # Importable packages that your application requires, one per line
+# This does not work yet: also need to explicitly list six, a dependency of
+# configobj. Then, however, things still do not work (ImportError within
+# configobj whicih I do not understand.) Replacing everything by wheels is not
+# possible because configobj does not provide a wheel on PyPI.
+#
+# Therefore, for the moment, using pynsist is abandoned.
 packages = configobj
     Pmw
 pypi_wheels = Pillow==3.4.2
