--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,12 +19,14 @@ environment:
       PYTHON_ARCH: "32"
       ARCHITECTURE: "win32-2.7"
       VCOMP90_PATH: "x86_microsoft.vc90.openmp_1fc8b3b9a1e18e3b_9.0.21022.8_none_ecdf8c290e547f39"
+      MSVCx90_PATH: "x86_microsoft.vc90.crt_1fc8b3b9a1e18e3b_9.0.30729.8387_none_5094ca96bcb6b2bb"
 
     - PYTHON: "C:\\Python27-x64"
       PYTHON_VERSION: "2.7.x"
       PYTHON_ARCH: "64"
       ARCHITECTURE: "win-amd64-2.7"
       VCOMP90_PATH: "amd64_microsoft.vc90.openmp_1fc8b3b9a1e18e3b_9.0.21022.8_none_a5325551f9d85633"
+      MSVCx90_PATH: "amd64_microsoft.vc90.crt_1fc8b3b9a1e18e3b_9.0.30729.8387_none_08e793bfa83a89b5"
 
 install:
   - "cinst innosetup"
@@ -45,15 +47,19 @@ build_script:
   # compile mo files
   - "%CMD_IN_ENV% pybabel compile -d kombilo/lang -D kombilo"
 
+  # copy dlls which we want to include in the wheel
+  - ps: "ls c:/windows/winsxs/amd64_microsoft.vc90.crt*"
+  - "cp c:/windows/winsxs/%MSVCx90_PATH%/ms*90.dll c:/projects/kombilo/kombilo/"
+  - "cp c:/windows/winsxs/Manifests/%MSVCx90_PATH%.manifest c:/projects/kombilo/kombilo/Microsoft.VC90.CRT.manifest"
+
+  - "cp c:/windows/winsxs/%VCOMP90_PATH%/vcomp90.dll c:/projects/kombilo/kombilo/"
+  - "cp c:/windows/winsxs/Manifests/%VCOMP90_PATH%.manifest c:/projects/kombilo/kombilo/Microsoft.VC90.OpenMP.manifest"
+
   - "%CMD_IN_ENV% python setup.py build"
-  - "%CMD_IN_ENV% python setup.py bdist_wheel"  # note: the wheel also requires the dlls, notably vvcomp90.dll, which is not easily found automatically(?)
+  - "%CMD_IN_ENV% python setup.py bdist_wheel"
 
   - "%CMD_IN_ENV% cp build\\lib.%ARCHITECTURE%\\kombilo\\_libkombilo.pyd kombilo"
   - "%CMD_IN_ENV% pyinstaller.exe kombilo.spec"
-
-  # pyinstaller does not find vcomp90.dll by itself :-(
-  - "cp c:/windows/winsxs/%VCOMP90_PATH%/vcomp90.dll c:/projects/kombilo/dist/kombilo/"
-  - "cp c:/windows/winsxs/Manifests/%VCOMP90_PATH%.manifest c:/projects/kombilo/dist/kombilo/Microsoft.VC90.OpenMP.manifest"
 
   - ps: "cp c:/projects/kombilo/kombilo.ico c:/projects/kombilo/dist/kombilo"
   - ps: "ls c:/projects/kombilo/dist/kombilo"
@@ -63,6 +69,6 @@ build_script:
   - "%CMD_IN_ENV% mv installer/kombilo%KOMBILO_VERSION%.exe installer/kombilo%KOMBILO_VERSION%-%PYTHON_ARCH%.exe"
 
 artifacts:
-  - path: dist\*.*
-  - path: installer\*
+  - path: dist\*.whl
+  - path: installer\*.exe
 
