Add option to create only one db on adding folder + all its subfolders recursively. Improve memory management.

--- a/kombilo/default.cfg
+++ b/kombilo/default.cfg
@@ -41,6 +41,9 @@ strictDuplCheck = False
 # Put variations into the database?
 processVariations = True
 #
+# Create one database per folder (or put everthing below some folder into the same database)?
+oneDBperFolder = True
+#
 # Tag games as "professional games"? Options are "Never", "All games", and
 # "All games with p-rank players".
 tagAsPro = Never
