--- a/kombilo/default.cfg
+++ b/kombilo/default.cfg
@@ -187,8 +187,8 @@ scaling = -1
 onlyOneMouseButton = ""
 # editable
 # label: Search history
-# Number of pattern searches stored in the search history window. Decrease if your
-# computer has little RAM.
+# Number of pattern searches stored in the search history window.
+# (0 means: store all searches).
 maxLengthSearchesStack = 30
 # editable
 # values: BOOLEAN
