--- a/kombilo/default.cfg
+++ b/kombilo/default.cfg
@@ -25,7 +25,7 @@ sgfpath = ""
 # They can be changed in the "Edit DB list" window.
 #
 # Accept duplicates?
-acceptDupl = True
+acceptDupl = False
 #
 storeDatabasesSeparately = False
 whereToStoreDatabases = ""
