--- a/kombilo/default.cfg
+++ b/kombilo/default.cfg
@@ -27,6 +27,9 @@ sgfpath = ""
 # Accept duplicates?
 acceptDupl = False
 #
+# Log duplicates?
+logDuplicates = True
+#
 storeDatabasesSeparately = False
 whereToStoreDatabases = ""
 #
