--- a/kombilo/default.cfg
+++ b/kombilo/default.cfg
@@ -183,11 +183,11 @@ shadedStoneVar = True
 scaling = -1
 # editable
 # label: Only one mouse button
-# If you have no right mouse button, set this to "<M2-Button-1>;<M2-B1-Motion>"
-# to select the search region with Alt+Left-click. (In theory, you could also
-# set this to a different pair of Tkinter mouse bindings, separated by
-# a semi-colon.)
-onlyOneMouseButton = ""
+# values: BOOLEAN
+# Select if you have no right mouse button (or do not want to use it).
+# You can then select the search region with clicking the (left)
+# mouse button and dragging. (Restart required.)
+only_one_mouse_button = False
 # editable
 # label: Search history
 # Number of pattern searches stored in the search history window.
