Fix broken Anywhere game info search; optionally add full SGF to db, only root node by default

--- a/kombilo/default.cfg
+++ b/kombilo/default.cfg
@@ -51,6 +51,9 @@ oneDBperFolder = True
 # "All games with p-rank players".
 tagAsPro = Never
 #
+# Include full sgf of each game into database (rather than just the root node)?
+include_full_sgf = False
+#
 algo_hash_full = True
 algo_hash_corner = False
 #
