Get Innosetup using Nuget, part 6

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,9 +30,6 @@ environment:
 
 install:
   - nuget install Tools.InnoSetup
-  - ps: "ls C:/projects/kombilo"
-  - ps: "ls c:/projects/kombilo/Tools.Innosetup.5.5.9/tools"
-  - ps: "ls c:/projects/kombilo/Tools.Innosetup.5.5.9/tools/iscc.exe"
 
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - "python --version"
@@ -67,7 +64,7 @@ build_script:
   - ps: "cp c:/projects/kombilo/kombilo.ico c:/projects/kombilo/dist/kombilo"
   - ps: "ls c:/projects/kombilo/dist/kombilo"
 
-  - "%CMD_IN_ENV% \"c:/projects/kombilo/Tools.Innosetup.5.5.9/Inno\ Setup\ 5/iscc.exe\" kombilo.iss"
+  - "%CMD_IN_ENV% c:/projects/kombilo/Tools.Innosetup.5.5.9/tools/iscc.exe kombilo.iss"
 
   - "%CMD_IN_ENV% mv installer/kombilo%KOMBILO_VERSION%.exe installer/kombilo%KOMBILO_VERSION%-%PYTHON_ARCH%.exe"
 
