--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,10 @@ environment:
 
 install:
   - nuget install Tools.InnoSetup
+  - nuget install swigwin
+  - ps: "ls c:/projects/kombilo"
+  - ps: "ls c:/projects/kombilo/swigwin"
+
 
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - "python --version"
@@ -46,6 +50,13 @@ build_script:
 
   # compile mo files
   - "%CMD_IN_ENV% pybabel compile -d kombilo/lang -D kombilo"
+
+  # swig
+  - "%CMD_IN_ENV c:/projects/kombilo/swigwin/swig.exe -c++ -python c:/projects/kombilo/kombilo/libkombilo.i"
+  - ps: "ls c:/projects/kombilo"
+  - ps: "ls c:/projects/kombilo/kombilo/libkombilo"
+  - ps: "mv c:/projects/kombilo/libkomilo.py c:/projects/kombilo/kombilo/"
+  - ps: "mv c:/projects/kombilo/libkomilo_wrap.cxx c:/projects/kombilo/kombilo/libkombilo/"
 
   # copy dlls which we want to include in the wheel
   - ps: "ls c:/windows/winsxs/amd64_microsoft.vc90.crt*"
