Make sure switch_language is always called on startup, fixes #2
Also fix problem with Py3 and translations

--- a/kombilo/default.cfg
+++ b/kombilo/default.cfg
@@ -59,7 +59,7 @@ algo_hash_corner = False
 #
 # ------------- theme ---------------------------
 theme = default
-language = ""
+language = en
 # section: Fonts
 #
 # editable
